--- a/PROYECTO/PROYECTO1/CODIGO/SolicitarSeguro.form
+++ b/PROYECTO/PROYECTO1/CODIGO/SolicitarSeguro.form
@@ -121,7 +121,7 @@
                                       <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
                                       <Component id="MarcaVehiculo" min="-2" pref="122" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="GuardarInformacion" min="-2" pref="122" max="-2" attributes="0"/>
+                                  <Component id="Cotizar" min="-2" pref="122" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
@@ -139,7 +139,7 @@
                                   </Group>
                               </Group>
                               <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
-                              <Component id="jButton6" min="-2" max="-2" attributes="0"/>
+                              <Component id="MostrarDato" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -238,7 +238,7 @@
                   <Component id="txtValVehiculo" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="21" pref="21" max="-2" attributes="0"/>
-              <Component id="GuardarInformacion" min="-2" max="-2" attributes="0"/>
+              <Component id="Cotizar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="23" pref="23" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="txtCostoPrima" min="-2" max="-2" attributes="0"/>
@@ -273,7 +273,7 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton6" min="-2" max="-2" attributes="0"/>
+                      <Component id="MostrarDato" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -512,7 +512,7 @@
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtValVehiculoKeyTyped"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="GuardarInformacion">
+    <Component class="javax.swing.JButton" name="Cotizar">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Yu Gothic Medium" size="11" style="1"/>
@@ -520,7 +520,7 @@
         <Property name="text" type="java.lang.String" value="COTIZAR"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="GuardarInformacionActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CotizarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCostoPrima">
@@ -572,6 +572,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Solicitar Seguro"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SolicitarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Regreso">
       <Properties>
@@ -595,12 +598,12 @@
         <Property name="text" type="java.lang.String" value="Aseguradora &quot;Automas&quot;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton6">
+    <Component class="javax.swing.JButton" name="MostrarDato">
       <Properties>
         <Property name="text" type="java.lang.String" value="Mostrar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MostrarDatoActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
