--- a/PROYECTO/PROYECTO1/CODIGO/MisIncidentesAsegurados.form
+++ b/PROYECTO/PROYECTO1/CODIGO/MisIncidentesAsegurados.form
@@ -34,7 +34,7 @@
                               <Component id="Detalles" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Component id="MostrarDatos" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="27" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="Pagar" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -110,16 +110,25 @@
     </Container>
     <Component class="javax.swing.JButton" name="Detalles">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Yu Gothic UI Light" size="12" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Detalle"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="Pagar">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Yu Gothic UI Light" size="12" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Pagar"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="MostrarDatos">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Yu Gothic UI Light" size="12" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Mostrar"/>
       </Properties>
     </Component>
