--- a/PROYECTO/PROYECTO1/CODIGO/Administrador.form
+++ b/PROYECTO/PROYECTO1/CODIGO/Administrador.form
@@ -70,12 +70,12 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="ReporteIncidentes" max="32767" attributes="0"/>
-                          <Component id="jLabel2" min="-2" pref="133" max="-2" attributes="0"/>
+                          <Component id="jLabel2" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="Taller" max="32767" attributes="0"/>
-                          <Component id="jLabel3" min="-2" pref="133" max="-2" attributes="0"/>
+                          <Component id="jLabel3" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="salir" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
