--- a/PROYECTO/PROYECTO1/CODIGO/Log.form
+++ b/PROYECTO/PROYECTO1/CODIGO/Log.form
@@ -75,6 +75,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtUsuario">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtUsuarioActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="iniciar">
       <Properties>
