--- a/PROYECTO/PROYECTO1/CODIGO/PagosNoAsegurados.form
+++ b/PROYECTO/PROYECTO1/CODIGO/PagosNoAsegurados.form
@@ -29,8 +29,6 @@
                   <Component id="jScrollPane2" pref="560" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="179" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="MostrarTabla" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="salir" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -45,10 +43,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jScrollPane1" min="-2" pref="106" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="MostrarTabla" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="salir" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="salir" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="150" max="-2" attributes="0"/>
@@ -90,11 +85,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="MostrarTabla">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Mostrar"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="salir">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
