--- a/PROYECTO/PROYECTO1/CODIGO/ReportesIncidentes.form
+++ b/PROYECTO/PROYECTO1/CODIGO/ReportesIncidentes.form
@@ -169,9 +169,8 @@
     <Component class="javax.swing.JComboBox" name="ListaServicios">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Elige una Opcion"/>
-            <StringItem index="1" value=" "/>
+          <StringArray count="1">
+            <StringItem index="0" value="Elige una Opcion."/>
           </StringArray>
         </Property>
       </Properties>
@@ -180,7 +179,7 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="1">
-            <StringItem index="0" value="Elige una Opcion"/>
+            <StringItem index="0" value="Elige una Opcion."/>
           </StringArray>
         </Property>
       </Properties>
@@ -213,6 +212,12 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="0" rowCount="4"/>
             </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0"/>
+            </Property>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
@@ -227,6 +232,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Agregar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AddActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
